hokusai/staging-ingress-canary.yml
# prettier-ignore

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hokusai-sandbox-web-canary
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hokusai-sandbox-canary
      component: web
      layer: application
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hokusai-sandbox-canary
        component: web
        layer: application
      name: hokusai-sandbox-web-canary
    spec:
      containers:
      - env:
          - name: PORT
            value: "3000"
        image: 585031190124.dkr.ecr.us-east-1.amazonaws.com/hokusai-sandbox:staging
        imagePullPolicy: Always
        name: hokusai-sandbox-web
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hokusai-sandbox-canary
    component: web
    layer: application
  name: hokusai-sandbox-web-internal-canary
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
      targetPort: http
  selector:
    app: hokusai-sandbox-canary
    layer: application
    component: web
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hokusai-sandbox-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
    - host: hokusai-sandbox-staging.artsy.net
      http:
        paths:
          - path: /
            backend:
              serviceName: hokusai-sandbox-web-internal-canary
              servicePort: http
